This is the 4 projects for Project A

--- a/project-a/page3.html
+++ b/project-a/page3.html
@@ -13,15 +13,9 @@
 </head>
 
 <body>
-    <h1>Motus</h1>
+    <h1>Project Title</h1>
+    <script src="js/page3.js"></script>
+    <button> <a href="index.html">Back </a> </button>
 </body>
-<p>
-
-<p> <a href="page1.html">Page1</a> </p>
-<p> <a href="page2.html">Page2</a> </p>
-<p> <a href="page3.html">Page3</a> </p>
-<p> <a href="page4.html">Page4</a> </p>
-
-</p>
 
 </html>
