--- a/project-a/page1.html
+++ b/project-a/page1.html
@@ -13,15 +13,9 @@
 </head>
 
 <body>
-    <h1>Motus</h1>
+    <h1>Project Title</h1>
+    <button> <a href="index.html">Back</a> </button>
+    <script src="js/page1.js"></script>
 </body>
-<p>
-
-<p> <a href="page1.html">Page1</a> </p>
-<p> <a href="page2.html">Page2</a> </p>
-<p> <a href="page3.html">Page3</a> </p>
-<p> <a href="page4.html">Page4</a> </p>
-
-</p>
 
 </html>
