--- a/project-a/Coarse.html
+++ b/project-a/Coarse.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <h1>Project Title</h1>
-    <script src="js/page3.js"></script>
+    <h1>Motus</h1>
+    <script src="js/page4.js"></script>
     <button> <a href="index.html">Back </a> </button>
 </body>
 
