--- a/project-a/Reminiscence.html
+++ b/project-a/Reminiscence.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <h1>Project Title</h1>
-    <button> <a href="index.html">Back</a> </button>
-    <script src="js/page1.js"></script>
+    <h1>Motus</h1>
+    <script src="js/page2.js"></script>
+    <button> <a href="index.html">Back </a> </button>
 </body>
 
 </html>
