--- a/project-a/index.html
+++ b/project-a/index.html
@@ -17,10 +17,10 @@
 </body>
 <p>
 
-<p> <a href="page1.html">Page1</a> </p>
-<p> <a href="page2.html">Page2</a> </p>
-<p> <a href="page3.html">Page3</a> </p>
-<p> <a href="page4.html">Page4</a> </p>
+<p> <a href="Alluring.html">Alluring</a> </p>
+<p> <a href="Reminiscence.html">Reminiscence</a> </p>
+<p> <a href="Embittered.html">Embittered</a> </p>
+<p> <a href="Coarse.html">Coarse</a> </p>
 
 </p>
 
