--- a/project-b/index.html
+++ b/project-b/index.html
@@ -24,16 +24,11 @@
             referred to as neural networks or synapses. When we work these connections, they stronger they become, which
             allows us brain to intake information better.
         </p>
-        <div>
-            <script class="CANVAS" src="main.js"></script>
-        </div>
-
 
     </div>
 
     <div class="doubleboxes">
-        <img src="https://drive.google.com/uc?export=download&id=1-fQObb_UjSyhviNouoQzEbhWA-IfEiyc" width="500"
-            height="250">
+        <img src="images/brainimage.png" width="500" height="250">
     </div>
 
     <div class="text">
@@ -100,6 +95,19 @@
     <div class="long"></div>
     <div class="long"></div>
     <div class="long"></div>
+
+    <div class="flexbox">
+        <div class="aboutthis">
+            <img src="images/aboutthis.png" width="500" height="750">
+        </div>
+
+        <div id="canvas-container">
+            <!-- p5 canvas will be appended here! -->
+        </div>
+    </div>
+
+
+    <script src="main.js"></script>
 </body>
 
 </html>
